Finalizado tela carrinho de compras

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,5 +2,6 @@ $theme-colors: (
   "primary": #191c1f,
   "secondary": #181361,
   "dark": #191c1f,
+  "info": #424242,
 );
 @import "~bootstrap/scss/bootstrap";
