alterado cor tema dark

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 $theme-colors: (
   "primary": #191c1f,
   "secondary": #181361,
-  "dark": #191c1f,
+  "dark": #0c0e0f,
   "info": #424242,
 );
 @import "~bootstrap/scss/bootstrap";
